everything is in the correct location except the main logo and its contents are too low

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -52,15 +52,10 @@ ul {
 }
 
 .footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   background: #eee;
-  padding: 12px;
+  padding: 20px;
 }
 
 .content {
@@ -68,6 +63,6 @@ ul {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 14px;
+  gap: 20px;
   flex: 1;
 }
